--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
 
         body {
             margin: 0;
-            padding: 0;
+            padding: 0 20px;
+            padding-bottom: 20px;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
             width: 100%;
             flex-direction: column;
             background-color: #1a1a1a;
