Privacy policy update

--- a/index.html
+++ b/index.html
@@ -431,6 +431,13 @@
         }
     </style>
 
+    <!-- Privacy Page -->
+
+    <div style="display:none;" class="page-container centered" id="privacy">
+        <h1>Privacy Policy</h1>
+        <p>We do not collect or store any data on this website, or in any extension or add-on we support. If you have any questions, please don't hesitate to  <a data-page="contact" href="#contact">reach out</a>. </p> 
+    </div>
+
     <!-- END PAGES -->
 
     <!-- General Scripts -->
