Say thanks update

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -89,7 +89,7 @@
 
 <body>
     <h1>Privacy Policy</h1>
-    <p>Your privacy is important to us. It is our policy to respect your privacy regarding any information we may collect from you across our website, <a href="http://www.example.com">http://www.example.com</a>, and other sites we own and operate.</p>
+    <p>Your privacy is important to us. It is our policy to respect your privacy regarding any information we may collect from you across our website, and other sites we own and operate.</p>
     <style>
         *,
         *::before,
