--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             <img class="" src="/images/Tom-DeSimone.png" alt="Tom DeSimone">
         </span>
         <p>My name is Tom DeSimone.</p>
-        <p>I'm a developer whose mission is to improve your your workflows by helping you leverage technology.</p>
+        <p>I'm a developer whose mission is to improve your workflows by helping you leverage technology.</p>
         <p>My motto is that computers should do computer work so that humans are free to do the more interesting work
             humans do best.</p>
         <p>Want to learn more about how I might be able to help you? Contact me today to schedule a free consultation.
