--- a/index.html
+++ b/index.html
@@ -553,10 +553,13 @@
                     font-weight: normal;
                 }
 
+
+
                 #mce-responses {
                     display: flex;
                     justify-content: center;
                     align-items: center;
+                    margin-bottom: 15px;
                 }
                 .clear {
                     text-align: center;
