--- a/index.html
+++ b/index.html
@@ -524,16 +524,16 @@
                 }
 
                 #subscribe input[type="submit"] {
-                    margin: 10px 15px;
+                  
+                    margin-top: 15px;
                     border: 2px solid #f2f2f2;
                     color: #f2f2f2;
                     background-color: #1a1a1a;
                     font-size: 1em;
-                    /* width: 200px; */
                 }
 
                 #mc_embed_signup_scroll div.mc-field-group {
-                    margin: 15px;
+                    margin: 15px 0 ;
                 }
 
                 #subscribe input[type="submit"]:hover {
@@ -553,13 +553,11 @@
                     font-weight: normal;
                 }
 
-
-
                 #mce-responses {
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    margin-bottom: 15px;
+                
                 }
                 .clear {
                     text-align: center;
@@ -605,7 +603,6 @@
                     justify-content: center;
                 }
 
-                /* when subscribe button is disabled make it light gray */
                 body #subscribe #mc-embedded-subscribe.loading,
                 body #subscribe #mc-embedded-subscribe.loading:hover {
                     background-color: white;
